[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
dioxus = {version = "0.5.0-alpha.0", features = ["fullstack"]}

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
