[package]
name = "fullstack_with_surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.0", features = ["fullstack"] }
serde = "1.0.197"
surrealdb = "1.3.0"
tokio = { version = "1.36.0", features = ["time"] }

[features]
default=[]
server=["dioxus/axum"]
web = ["dioxus/web"]
