[package]
name = "spawning_futures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["time"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
