[package]
name = "ssr_comunity_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.35"
dioxus = "0.5.0-alpha.0"
dioxus-ssr = "0.5.0-alpha.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
serde = "1.0.197"
surrealdb = "1.3.1"
tokio = { version = "1.36.0", features = ["full"] }
