[package]
name = "use_resource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.0", features = ["web", "router"] }
reqwest = { version = "0.11.25", features = ["json"] }
serde = "1.0.197"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
